# wcli-toolkit

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  README.md  TODO.md  config.example.yaml  pyproject.toml  wcli_PRD.md  企业微信CLI工具 (wcli) 项目结构与设置指南.md
.cursor/: settings.json
wcli/: __init__.py  main.py
